api: Added endpoints to get a device version and set a coil
